--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Smirnov Aleksandr",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-session": "^1.17.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
